# SEER

./: .env.example  .seer_memory.md  SEER_PRD_v2.docx  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: README.md  build-windows.yml
agent/: package-lock.json  package.json  tsconfig.json
agent/scripts/: build-exe.mjs
agent/src/: auth.ts  cache.ts  executor.ts  index.ts  ipc.ts  mcp-client.ts  mcp-config.ts  model-switch.ts  network.ts  relay.ts  types.ts  updater.ts
api/: demo.ts  mcp.ts  reset-usage.ts
benchmark/: package-lock.json  package.json  prompts.json  results.json  run.ts
desktop/: LICENSE.rtf  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
public/: index.html
scripts/: deploy.sh  setup-supabase.sql
src/: server.ts
src/api/: demo.ts  health.ts  mcp.ts  reset-usage.ts
src/lib/: aspect-memory.ts  auth.ts  complexity.ts  conflict-detect.ts  context-health.ts  credential-detect.ts  embeddings.ts  encryption.ts  formatter.ts  haiku.ts  logger.ts  mark-done.ts  memory-log.ts  mfa.ts  mode-switch.ts  multi-agent.ts  (+9 more)
test/: complexity.test.cjs  context-health.test.cjs  mode-switch.test.cjs  model-switch-e2e.test.cjs  multi-agent.test.cjs  rate-limit.test.cjs  strict-rules.test.cjs
tests/: test-memory-sync.ts
web/: .env.example  next.config.ts  package-lock.json  package.json
(+217 files in other folders)
